# Caffe-HelloWorld

./: .gitignore  CMakeLists.txt  XOR_iter_1000000.caffemodel  XOR_iter_1000000.solverstate  XOR_iter_2000000.caffemodel  XOR_iter_2000000.solverstate  XOR_iter_3000000.caffemodel  XOR_iter_3000000.solverstate  XOR_iter_4000000.solverstate  XOR_iter_5000000.solverstate  main.cpp
config/: model.prototxt  solver.prototxt
